# fhir-structure-definition-to-pydantic

./: .gitignore  pyproject.toml
fhir-definitions-resources-csv/: 100-ConditionDefinition.csv  101-Consent.csv  102-Contract.csv  103-Coverage.csv  104-CoverageEligibilityRequest.csv  105-CoverageEligibilityResponse.csv  106-DetectedIssue.csv  107-Device.csv  108-DeviceAssociation.csv  109-DeviceDefinition.csv  110-DeviceDispense.csv  111-DeviceMetric.csv  112-DeviceRequest.csv  113-DeviceUsage.csv  114-DiagnosticReport.csv  115-DocumentReference.csv  116-DomainResource.csv  117-Encounter.csv  118-EncounterHistory.csv  119-Endpoint.csv  120-EnrollmentRequest.csv  121-EnrollmentResponse.csv  122-EpisodeOfCare.csv  123-EventDefinition.csv  124-Evidence.csv  125-EvidenceReport.csv  126-EvidenceVariable.csv  127-ExampleScenario.csv  128-ExplanationOfBenefit.csv  129-FamilyMemberHistory.csv  130-Flag.csv  131-FormularyItem.csv  132-GenomicStudy.csv  133-Goal.csv  134-GraphDefinition.csv  135-Group.csv  136-GuidanceResponse.csv  137-HealthcareService.csv  138-ImagingSelection.csv  139-ImagingStudy.csv  (+122 more)
fhir-definitions-types-csv/: 0-Element.csv  1-BackboneElement.csv  10-instant.csv  11-integer.csv  12-integer64.csv  13-markdown.csv  14-oid.csv  15-positiveInt.csv  16-string.csv  17-time.csv  18-unsignedInt.csv  19-uri.csv  2-base64Binary.csv  20-url.csv  21-uuid.csv  22-xhtml.csv  23-Address.csv  24-Age.csv  25-Annotation.csv  26-Attachment.csv  27-Availability.csv  28-BackboneType.csv  29-Base.csv  3-boolean.csv  30-CodeableConcept.csv  31-CodeableReference.csv  32-Coding.csv  (+44 more)
(+12 files in other folders)
